[flake8]
max-line-length=99
[sdist]
formats=tar,zip

[bdist_wheel]
universal=1

[metadata]
name = owlery-client
version = 1.0.0
description = Owlery API
license = Apache
long_description = 
     Owlery provides a web API for an [OWL API](http://owlapi.sourceforge.net)-based reasoner containing
     a configurable set of ontologies (a \&quot;knowledgebase\&quot;).
author = Robert P. Goldman
author_email = rpgoldman@sift.net
license_files = LICENSE
keywords = OpenAPI, OpenAPI-Generator, Owlery API
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    OpenAPI
    OpenAPI :: client
    Programming Language :: OWL


[options]
install_requires =
  urllib3 >= 1.25.3
  python-dateutil
python_requires = >= 3.8
packages = find:
test_requires =
  pytest
  pytest-cov>=2.8.1
test_suite = tests
setup_requires = 
    setuptools >=38.3.0 # reported to contain bug fixes for setup.cfg processing.

[aliases]
tests = pytest